# aichallenge-2025

./: .coderabbit.yaml  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.gpu.yml  docker-compose.sound.yml  docker-compose.yml  docker-entrypoint.sh  docker_exec.sh  docker_run.sh  packages.txt  requirements.txt  setup.bash
.codex/skills/code-reviewer/: SKILL.md
.codex/skills/data-analyzer/: SKILL.md
.codex/skills/error-analyzer/: SKILL.md
.codex/skills/evaluation-analyzer/: SKILL.md
.codex/skills/interface-guardian/: SKILL.md
.codex/skills/web-summarized/: SKILL.md
.steering/001-30km-control-invalid/: hypothesis.md
.steering/20260701-gate1-v2x-stop/: design.md  requirements.md  tasklist.md
.steering/20260701-gate2-v2x-overtake/: design.md  requirements.md  tasklist.md
.steering/20260701-race-v2x-follow-and-overtake/: design.md  requirements.md  tasklist.md
.steering/full-e2e/: idea.md
aichallenge/: README.md  run_autoware.bash  run_evaluation.bash  run_simulator.bash
aichallenge/ml_workspace/: README.md
aichallenge/ml_workspace/reinforcement_learning/: README.md
aichallenge/ml_workspace/reinforcement_learning/src/: main.py  select_parts.py
aichallenge/ml_workspace/reinforcement_learning/src/action/: default_action_adapter.py  interfaces.py
aichallenge/ml_workspace/reinforcement_learning/src/context/: context_manager.py  context_types.py
aichallenge/simulator_scripts/: README.md  dev.sh  eval.sh  gate.sh  multiplay-client.sh  multiplay-host.sh  multiplay-server.sh  parallel.sh  sample-scenario.sh  simulator.sh
aichallenge/tools/simulation_by_cpp/: CMakeLists.txt  MPC.cpp  MPC.hpp  csv_loader.cpp  csv_loader.hpp  reference_path.hpp  spatial_bicycle_models.cpp  spatial_bicycle_models.hpp  trajectory_point.hpp
aichallenge/tools/simulation_by_python/: MPC.py  map.py  py_all.txt
aichallenge/tools/simulation_by_python_simplify/: spatial_bicycle_models.py
aichallenge/tools/simulation_by_python_simplify_v2/: MPC.py  simulation.py
aichallenge/tools/simulation_cpp_for_autoware/: MPC.cpp  csv_loader.cpp  csv_loader.hpp  main.cpp  mpc_simulator.hpp  reference_path.cpp  reference_path.hpp  spatial_bicycle_models.cpp
aichallenge/tools/simulation_from_py_to_cpp/: OdometryInput.hpp  csv_loader.hpp  err.txt  interp_utils.hpp  main.cpp  odom_loader.cpp  odom_loader.hpp  reference_path.hpp
aichallenge/utils/: record_all_rosbag.bash
aichallenge/workspace/simulation_by_cpp/: CMakeLists.txt  MPC.cpp  MPC.hpp  all_sources.txt  all_sources_dump.txt  csv_loader.cpp  csv_loader.hpp  dump_all_files.txt  hoge.py  hoge.txt  main.cpp  mpc_utils.hpp  package.txt  raceline_awsim_15km_py.csv  reference_path.cpp  reference_path.hpp  waypoint.cpp  waypoint.hpp  waypoint.txt
aichallenge/workspace/simulation_by_python/: reference_path.py  simulation.py  spatial_bicycle_models.py
aichallenge/workspace/simulation_by_python_simplify/: compare_logs.py  mpc_log.csv  reference_path.py  simulation.py
aichallenge/workspace/simulation_by_python_simplify_v2/: plot_course_overlay.py  reference_path.py
aichallenge/workspace/simulation_from_py_to_cpp/: CMakeLists.txt  MPC.cpp  MPC.hpp  constraints.hpp  csv_loader.cpp  main.cpp  reference_path.cpp  reference_path.hpp  spatial_bicycle_models.cpp  spatial_bicycle_models.hpp
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros_cpp/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros_cpp/include/multi_purpose_mpc_ros_cpp/: controller.hpp  osqp_mpc.hpp  ref_velocity_config.hpp
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros_cpp/launch/: mpc_controller.launch.py
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros_cpp/src/: controller.cpp  main.cpp  osqp_mpc.cpp  ref_velocity_config.cpp
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros_cpp/test/: test_lap_tracker.cpp  test_path_constraint_bounds.cpp  test_ref_velocity_config.cpp  test_reference_path_bounds.cpp
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros_cpp/test/data/: ref_vel.yaml  simple_map.pgm  simple_map.yaml
aichallenge/workspace/src/aichallenge_submit/simple_mpc/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/simple_mpc/include/: MPC.hpp  interp_utils.hpp  reference_path.hpp  simple_mpc.hpp  spatial_bicycle_models.hpp
aichallenge/workspace/src/aichallenge_submit/simple_mpc/src/: MPC.cpp  reference_path.cpp  simple_mpc.cpp  spatial_bicycle_models.cpp
aichallenge/workspace/src/aichallenge_system/aichallenge_screen_recorder/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_system/aichallenge_screen_recorder/launch/: screen_recorder.launch.xml
aichallenge/workspace/src/aichallenge_system/aichallenge_screen_recorder/src/: encoder_worker.cpp  encoder_worker.hpp  screen_recorder_node.cpp  screen_recorder_node.hpp
aichallenge/workspace/src/aichallenge_system/aichallenge_screen_recorder/test/: test_encoder_worker.cpp
aichallenge/workspace/src/aichallenge_tools/teleop_manager/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_tools/teleop_manager/config/: teleop.param.yaml
aichallenge/workspace/src/aichallenge_tools/teleop_manager/include/teleop_manager/: teleop_manager_node.hpp
aichallenge/workspace/src/aichallenge_tools/teleop_manager/launch/: teleop_manager.launch.xml
aichallenge/workspace/src/aichallenge_tools/teleop_manager/src/: keyboard_to_joy_node.cpp  keyboard_x11_to_joy_node.cpp  teleop_manager_node.cpp
docs/: README.md
docs/guide/: beginner-deck.marp.md
docs/interface/: evaluation-interface.md  participant-interface.md
docs/spec/: architecture.md  competition-rules.md  compose-overlays.md  docker-audio.md  host-uid-containers.md  how-to-setup.md  introduction.md  log-design.md  makefile-target-naming.md  mpc-integration.md  open-questions.md  safety-gates.md  submission-workflow.md  v2x-multivehicle.md
remote/: connect_zenoh.bash
vehicle/: README.md  download_submission.sh  run_driver.bash  run_zenoh.bash
(+64 files in other folders)
